--- a/_publications/2018-avpp.md
+++ b/_publications/2018-avpp.md
@@ -5,9 +5,9 @@ permalink: /publication/avpp
 excerpt: ''
 date: 2018-10-01
 venue: 'TACO'
-paperurl: 'http://loisorosa.github.io/files/avpp.pdf'
+paperurl: 'http://loisorosa.github.io/files/pdf/avpp.pdf'
 link: 'https://dl.acm.org/doi/abs/10.1145/3239567'
 citation: '<u>Lois Orosa</u>, Rodolfo Azevedo, and Onur Mutlu. <b>"AVPP: Address-first value-next predictor with value prefetching for improving the efficiency of load value prediction."</b> ACM Transactions on Architecture and Code Optimization (TACO), 2018'
 ---
-[Download paper here](http://loisorosa.github.io/files/avpp.pdf)
+[Download paper here](http://loisorosa.github.io/files/pdf/avpp.pdf)
 
