--- a/_publications/2019-eden.md
+++ b/_publications/2019-eden.md
@@ -5,9 +5,9 @@ permalink: /publication/eden
 excerpt: ''
 date: 2019-10-01
 venue: 'MICRO'
-paperurl: 'http://loisorosa.github.io/files/eden.pdf'
+paperurl: 'http://loisorosa.github.io/files/pdf/eden.pdf'
 link: 'https://dl.acm.org/doi/10.1145/3352460.3358280'
 citation: 'Skanda Koppula, <u>Lois Orosa</u>, A. Giray Yağlıkçı, Roknoddin Azizi, Taha Shahroodi, Konstantinos Kanellopoulos, and Onur Mutlu. <b>"EDEN: enabling energy-efficient, high-performance deep neural network inference using approximate DRAM."</b> In Proceedings of the 52nd Annual IEEE/ACM International Symposium on Microarchitecture (MICRO), 2019.'
 ---
-[Download paper here](http://loisorosa.github.io/files/eden.pdf)
+[Download paper here](http://loisorosa.github.io/files/pdf/eden.pdf)
 
