--- a/_publications/2019-itap.md
+++ b/_publications/2019-itap.md
@@ -5,9 +5,9 @@ permalink: /publication/itap
 excerpt: ''
 date: 2019-10-01
 venue: 'TACO'
-paperurl: 'http://loisorosa.github.io/files/itap.pdf'
+paperurl: 'http://loisorosa.github.io/files/pdf/itap.pdf'
 link: ''
 citation: 'Mohammad Sadrosadati, Seyed Borna Ehsani, Hajar Falahati, Rachata Ausavarungnirun, Arash Tavakkol, Mojtaba Abaee, <u>Lois Orosa</u>, Yaohua Wang, Hamid Sarbazi-Azad, and Onur Mutlu. <b>"ITAP: Idle-Time-Aware Power Management for GPU Execution Units."</b> ACM Transactions on Architecture and Code Optimization (TACO) 16, no. 1, 2019.'
 ---
-[Download paper here](http://loisorosa.github.io/files/itap.pdf)
+[Download paper here](http://loisorosa.github.io/files/pdf/itap.pdf)
 
