--- a/_publications/2018-flin.md
+++ b/_publications/2018-flin.md
@@ -5,9 +5,9 @@ permalink: /publication/flin
 excerpt: ''
 date: 2018-10-05
 venue: 'ISCA'
-paperurl: 'http://loisorosa.github.io/files/flin.pdf'
+paperurl: 'http://loisorosa.github.io/files/pdf/flin.pdf'
 link: 'https://ieeexplore.ieee.org/document/8416843'
 citation: 'Arash Tavakkol, Mohammad Sadrosadati, Saugata Ghose, Jeremie Kim, Yixin Luo, Yaohua Wang, Nika Mansouri Ghiasi, <u>Lois Orosa</u>, Juan Gómez-Luna, and Onur Mutlu. <b>"FLIN: Enabling fairness and enhancing performance in modern NVMe solid state drives."</b> In ACM/IEEE 45th Annual International Symposium on Computer Architecture (ISCA), 2018.'
 ---
-[Download paper here](http://loisorosa.github.io/files/flin.pdf)
+[Download paper here](http://loisorosa.github.io/files/pdf/flin.pdf)
 
